-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Qt Creator 4.4.1
-
None
-
I'm running on Ubuntu 17.04
Target machine is Remote Linux
Project is qmake-based
-
881ad3401cde08203d9624b6e6705c8db3454322
An built app isn't stopped when "Same build directory" is selected for preference "Stop applications before building:" is selected.
In this case I obviously have an error trying to rewrite running file on the target machine.
However, when "Same project" option is selected it stops the app. Unfortunately I can't stay with the option because at the same time I'm running another project for 2 build configurations and it requires "Same build directory" in order to run another app for both targets.
For Gerrit Dashboard: QTCREATORBUG-19326 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
214293,2 | RemoteLinux: Kill remote app before deployment | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |