RemoteLinux: Kill remote app before deployment

It's unlikely you want to have two instances running at the same time,
and SFTP does not let you overwrite a running executable anyway.

Task-number: QTCREATORBUG-19326
Change-Id: Iac48d28f538307fc1764f973ce0c9959ef89af03
Reviewed-by: hjk <hjk@qt.io>